css/components.css
/* Buttons */
.btn {
    position: relative;
    overflow: hidden;

    background-color: rgb(var(--text-color));
    color: rgb(var(--background-color));
    fill: rgb(var(--background-color));

    text-decoration: none;
    white-space: nowrap;
    min-width: fit-content;
    font-weight: 500;
    cursor: pointer;

    height: 48px;
    padding: 0 30px;
    border-radius: 100px;

    display: flex;
    justify-content: center;
    align-items: center;
}
.btn > * {
    position: relative;
    z-index: 2;
}
.btn::before {
    content: "";
    position: absolute;
    inset: 0;

    background-color: currentColor;
    opacity: 0;

    transition: 0.15s;
}
.btn:hover::before {
    opacity: 0.2;
}

.btn.icon {
    width: 48px;
    padding: 0 !important;
}

.btn.white {
    background-color: #fff;
    color: #000;
    fill: #000;
}

.btn.primary {
    background-color: rgb(var(--primary-color));
    color: #fff;
    fill: #fff;
}

.btn.primary-tonal {
    background-color: rgba(var(--primary-color), 0.1);
    color: rgb(var(--primary-color));
    fill: rgb(var(--primary-color));
}

.btn.text {
    background-color: transparent !important;
    padding: 0 !important;
}

/* Modal */
.modal {
    position: fixed;
    inset: 0;
    z-index: 999;

    display: flex;
    flex-direction: column;
    
    transform: translateY(100%);
    overflow-y: auto;
    
    transition: 0.3s;
}
.modal.opened {
    opacity: 1;
    transform: translateY(0);
    transition: 0.4s cubic-bezier(0, 1, 0.5, 1);
}

.modal-backdrop {
    position: fixed;
    inset: 0;
    z-index: 998;

    opacity: 0;
    visibility: hidden;

    background-color: rgb(var(--text-color));
    transition: 0.3s;
}
.modal-backdrop.opened {
    opacity: 0.6;
    visibility: visible;
}

.modal > .modal-header {
    min-height: 200px;
    cursor: pointer;
}

.modal .modal-close {
    cursor: pointer;
    opacity: 0.5;
    transition: 0.2s;
}
.modal .modal-close:hover {
    opacity: 1;
}

.modal > .modal-content {
    background-color: rgb(var(--background-color));
    flex-grow: 1;

    border-top-left-radius: var(--radius);
    border-top-right-radius: var(--radius);
}

.modal > .modal-content > div:not(.wrapper), .modal > .modal-content > div.wrapper > div {
    max-width: var(--max-width);
    margin: auto;

    padding: 0 24px 28px 24px;
    background-color: rgb(var(--background-color));
}

.modal > .modal-content > div:first-child {
    padding-top: 28px;
    background-color: rgba(var(--background-color), 0.9);
    backdrop-filter: blur(8px);
}

.modal > .modal-content .sticky {
    position: sticky;
    top: 0;
    z-index: 2;
}

/* Tags */
.tag {
    background-color: rgba(var(--primary-color), 0.1);
    color: rgb(var(--primary-color));
    
    font-size: 14px;
    font-weight: 500;
    border-radius: 100px;
    padding: 4px 20px;
}

.tag-group {
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
}

.tag.grey {
    background-color: rgba(90, 90, 90, 0.1);
    color: rgb(90, 90, 90);
}

/* Item Grid */
.item-grid {
    display: flex;
    flex-wrap: wrap;
    gap: 28px 60px;
}

